Removing redunant throws exceptions