@@ -294,10 +294,9 @@ public class TeamRepository extends EntityRepository<Team> {
     ResultList<Team> resultList = listAfter(null, fields, filter, limit, null);
     List<Team> allTeams = resultList.getData();
     List<Team> joinableTeams =
-        allTeams.stream()
-            .filter(Boolean.TRUE.equals(isJoinable) ? Team::getIsJoinable : t -> true)
-            .filter(t -> !t.getName().equals(ORGANIZATION_NAME))
-            .collect(Collectors.toList());
+            allTeams.stream()
+                    .filter(Boolean.TRUE.equals(isJoinable) ? Team::getIsJoinable : t -> true)
+                    .filter(t -> !t.getName().equals(ORGANIZATION_NAME)).toList();
     // build hierarchy of joinable teams
     joinableTeams.forEach(
         team -> {
@@ -517,7 +516,7 @@ public class TeamRepository extends EntityRepository<Team> {
     }
   }
 
-  public void initOrganization() throws IOException {
+  public void initOrganization() {
     String json = dao.findJsonByFqn(ORGANIZATION_NAME, Include.ALL);
     if (json == null) {
       LOG.debug("Organization {} is not initialized", ORGANIZATION_NAME);
